--- a/css/desktop.css
+++ b/css/desktop.css
@@ -131,8 +131,8 @@
   
   .pet-border{
     margin-top: 10px;
+    margin-bottom: 0;
     border-bottom: solid 5px #f0e50a;
-    margin-bottom: 20px;
   }
   
   .pet-border img{
@@ -149,11 +149,14 @@
     align-items: center;
     justify-content: space-around;
     box-shadow: 0px 3px 10px rgba(0,0,0,0.25);
-    margin-bottom: 20px;
+    margin-top: 20px;
+
   }
   
   .content-image video{
     width: 100%;
+    display: block;
+    /* margin-top: 20px; */
     outline: none;
     border: none;
   }
