--- a/css/tablet.css
+++ b/css/tablet.css
@@ -133,7 +133,6 @@
   .pet-border{
     margin-top: 10px;
     border-bottom: solid 5px #f0e50a;
-    margin-bottom: 10px;
   }
   
   .pet-border img{
@@ -150,11 +149,12 @@
     align-items: center;
     justify-content: space-around;
     box-shadow: 0px 3px 10px rgba(0,0,0,0.25);
-    margin-bottom: 20px;
+    margin-top: 20px;
   }
   
   .content-image video{
     width: 100%;
+    display: block;
     outline: none;
     border: none;
   }
