--- a/css/desktop.css
+++ b/css/desktop.css
@@ -110,7 +110,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: rgba(0, 107, 51,0.4);
+    background: rgba(0, 107, 51,0.9);
   }
   
   .logo-text{
@@ -125,7 +125,7 @@
     display: block;
     width: 70%;
     font-size: 1.2rem;
-    color: #006b33;
+    color: rgba(255,255,255,0.9);
     font-weight: 600;
   }
   
