--- a/css/mobile.css
+++ b/css/mobile.css
@@ -95,7 +95,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: rgba(0, 107, 51,0.4);
+    background: rgba(0, 107, 51,0.9);
   }
   
   .logo-text{
@@ -111,7 +111,7 @@
     display: block;
     width: 95%;
     font-size: 1rem;
-    color: #006b33;
+    color: rgba(255,255,255,0.9);
     font-weight: 600;
   }
   
