--- a/css/tablet.css
+++ b/css/tablet.css
@@ -111,7 +111,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: rgba(0, 107, 51,0.4);
+    background: rgba(0, 107, 51,0.9);
   }
   
   .logo-text{
@@ -126,7 +126,7 @@
     display: block;
     width: 70%;
     font-size: 1.1rem;
-    color: #006b33;
+    color: rgba(255,255,255,0.9);
     font-weight: 600;
   }
   
