--- a/css/desktop.css
+++ b/css/desktop.css
@@ -147,7 +147,7 @@
   .content-image{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     box-shadow: 0px 3px 10px rgba(0,0,0,0.25);
     margin-top: 20px;
 
@@ -181,7 +181,9 @@
     align-items: center;
     justify-content: center;
     padding: 1rem;
-    margin-bottom: 40px;
+    margin-top: 30px;
+    padding-bottom: 0;
+
   }
   
   .component-desconto,
