--- a/css/tablet.css
+++ b/css/tablet.css
@@ -179,7 +179,8 @@
     align-items: center;
     justify-content: center;
     padding: 1rem;
-    margin-bottom: 40px;
+    margin-top: 30px;
+    padding-bottom: 0;
   }
   
   .component-desconto,
